idea/testData/debugger/sequence/psi/streams/negative/WithoutTerminalOperation.kt
import java.util.stream.IntStream

fun main(args: Array<String>) {
<caret>  val range = IntStream.range(1, 2)
}
